Decouple WireFormat from reader/writer json config.
Motivation:

We introduce json reader/writer configuration as an extension of the wire format.

Instead we should keep the WireFormat as an enum describing what format is expected.

The configuration of the accepted input / emitted output json should be configured separately.

Changes:

Revert WireFormat to an enum.

Introduce JsonReaderConfig / JsonWriterConfig from the JsonWireFormat class.

Add an internal extension of the message codec machinery to let them be configured using the json config.

Now the GrpcServerOptions owns configuration of the json reader/wrter.

Add a test ensuring that the Grpc server for HTTP transport is configured according to the expected JSON config.